log/build_2025-03-19_16-07-56/py_pubsub/stderr.log
  File "/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishimu.py", line 9
    freq_divider 0x04
                 ^^^^
SyntaxError: invalid syntax

